--- a/assets/scss/_effect-box.scss
+++ b/assets/scss/_effect-box.scss
@@ -38,6 +38,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     padding: 1rem;
 }
 
+/* 
 a.effect-box:after,
 a.effect-box:before {
   content: '';
@@ -72,4 +73,4 @@ a.effect-box:hover:before {
   opacity: 1;
 	-webkit-transform: scale(1);
 	transform: scale(1);
-}
+} */
