removed aspect ratio from css in favor of safari

--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -19,7 +19,7 @@ header.projects {
 
         .grid-item {
             position: relative;
-            aspect-ratio: 16/9;
+            padding-bottom: 45%;
             width: 95%;
             max-width: 100%; 
             border-radius: 4px;
