--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -42,6 +42,6 @@ body {
     justify-content: center;
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    padding: 2rem;
+    padding: 2rem 22%;
     text-align: center;
 }
