trying to get socials from hiding behind address bar in iphone

--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -85,6 +85,9 @@
     
     /* Navbar */
     /* Landing Page */
+    .socials{
+        bottom: 10vh;
+    }
     /* About */
     /* .border-wrapper{
         margin-top: 0vh;
@@ -168,5 +171,6 @@
     .social-link-contact{
         font-size: 3rem;
     }
+    
 
 }
