--- a/assets/scss/_socials.scss
+++ b/assets/scss/_socials.scss
@@ -4,7 +4,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     position: absolute;
-    bottom: 1rem;
+    bottom: 3vh;
     width: 100vw;
 }
 
