landing page socials

--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -85,7 +85,7 @@
     
     /* Navbar */
     /* Landing Page */
-    .socials{
+    .socials.landing{
         bottom: 14vh;
     }
     /* About */
