--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -19,8 +19,6 @@ header.projects {
 
         .grid-item {
             position: relative;
-            padding-bottom: 45%;
-            width: 95%;
             max-width: 100%; 
             border-radius: 4px;
             z-index: 1;
@@ -72,11 +70,13 @@ header.projects {
 
             a {
                 text-decoration: none;
-                height: 100%;
+                height: auto;
+                min-height: 200px;
                 width: 100%;
                 display: inline-flex;
                 justify-content: center;
                 align-items: center;
+                padding: 1rem;
             }
 
             div {
